--- a/frontend/src/components/Footer/footer.scss
+++ b/frontend/src/components/Footer/footer.scss
@@ -1,5 +1,5 @@
 @use '../../scss/abstracts' as *;
-@use '../../scss/layout' as *;
+@use '../../scss/theme/card' as *;
 
 .main-content {
 	border-bottom: $border-width solid $clr-neutral-6;
@@ -7,5 +7,5 @@
 
 .footer-nav-list-title,
 .brand-logo {
-	margin-bottom: $card-body-spacer;
+	margin-bottom: $card-title-spacer-y;
 }
