--- a/frontend/src/scss/layout/_buttons.scss
+++ b/frontend/src/scss/layout/_buttons.scss
@@ -16,7 +16,7 @@
 }
 
 .btn--icon {
-	padding: em(5);
+	padding: em(7);
 	margin-top: 0px;
 }
 
